# This file is part of libmodulemd
# Copyright (C) 2017-2018 Stephen Gallagher
#
# Fedora-License-Identifier: MIT
# SPDX-2.0-License-Identifier: MIT
# SPDX-3.0-License-Identifier: MIT
#
# This program is free software.
# For more information on the license, see COPYING.
# For more information on free software, see <https://www.gnu.org/philosophy/free-sw.en.html>.

option('developer_build', type : 'boolean', value : true)
option('build_api_v1', type : 'boolean', value : false)
option('build_api_v2', type : 'boolean', value : true)
option('test_dirty_git', type : 'boolean', value : false)
option('test_installed_lib', type : 'boolean', value : false)
option('skip_introspection', type : 'boolean', value : false)
option('python_name', type : 'string')
option('with_py2_overrides', type : 'boolean', value : false)
option('with_py3_overrides', type : 'boolean', value : true)
