# This file is part of libmodulemd
# Copyright (C) 2017-2018 Stephen Gallagher
#
# Fedora-License-Identifier: MIT
# SPDX-2.0-License-Identifier: MIT
# SPDX-3.0-License-Identifier: MIT
#
# This program is free software.
# For more information on the license, see COPYING.
# For more information on free software, see <https://www.gnu.org/philosophy/free-sw.en.html>.

option('developer_build', type : 'boolean', value : true)
option('libmagic', type : 'feature', value : 'enabled')
option('python_name', type : 'string')
option('rpmio', type : 'feature', value : 'enabled')
option('skip_introspection', type : 'boolean', value : false)
option('test_dirty_git', type : 'boolean', value : false)
option('test_installed_lib', type : 'boolean', value : false)
option('with_docs', type : 'boolean', value : true)
option('with_py2_overrides', type : 'boolean', value : true)
option('with_py3_overrides', type : 'boolean', value : true)
